--- a/app/templates/xslt.html
+++ b/app/templates/xslt.html
@@ -1,1 +1,1 @@
-<html><body><table><tr><td>Ariana Grande &amp; Nathan Sykes , </td><td>Jessie J, Ariana Grande &amp; Nicki Minaj , </td><td>Dua Lipa , </td><td>Madison Beer , </td><td>Doja Cat , </td></tr></table></body></html>
+<html><body><table><tr><td>One Direction , </td><td>Louis Tomlinson , </td><td>Niall Horan , </td><td>Zayn , </td><td>Liam Payne , </td></tr></table></body></html>
